# K2-Zephyr

./: CMakeLists.txt  README.md  build.sh  prj.conf  test_udp_simple.py
boards/: nucleo_f767zi.overlay
src/: control.c  control.h  led.c  led.h  main.c  net.c  net.h
